Added asynchronous cycles : blocks can individually run all solver steps. Decoupled solver state from parameters. Time step and block exchange can be async. Turned axis splitting methods into types.

--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.5.0"
 [deps]
 AMDGPU = "21141c5a-9bdb-4563-92ae-f87d6854732e"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+EnumX = "4e289a0a-7415-4d19-859d-a7e5c4648b56"
 KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
 Kokkos = "3296cea9-b0de-4b57-aba0-ce554b517c3b"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
@@ -35,6 +36,7 @@ ArmonOneAPI = "oneAPI"
 [compat]
 AMDGPU = "0.6, 0.7, 0.8"
 CUDA = "4.1 - 5, 5"
+EnumX = "1"
 KernelAbstractions = "0.9"
 MPI = "0.20.16"
 julia = ">= 1.9"
