--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.5.0"
 AMDGPU = "21141c5a-9bdb-4563-92ae-f87d6854732e"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 EnumX = "4e289a0a-7415-4d19-859d-a7e5c4648b56"
+Hwloc = "0e44f5e4-bd66-52a0-8798-143a42290a1d"
 KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
 Kokkos = "3296cea9-b0de-4b57-aba0-ce554b517c3b"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
@@ -37,6 +38,7 @@ ArmonOneAPI = "oneAPI"
 AMDGPU = "0.6, 0.7, 0.8"
 CUDA = "4.1 - 5, 5"
 EnumX = "1"
+Hwloc = "3"
 KernelAbstractions = "0.9"
 MPI = "0.20.16"
 Polyester = "0.7 - 0.7.11, ≥0.7.13"
