--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ NVTX = "5da4648a-3479-48b8-97b9-01cb529c0a1f"
 Polyester = "f517fe37-dbe3-4b94-8317-1923a5111588"
 Preferences = "21216c6a-2e73-6563-6e65-726566657250"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Scotch = "c8656ae5-b689-4c12-92d5-de0ad806c81d"
 ThreadPinning = "811555cd-349b-4f26-b7bc-1f208b848042"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 oneAPI = "8f75cd03-7ff8-4ecb-9b8f-daf728133b1b"
