--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,6 +17,7 @@ jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
+    if: ${{ ! contains(github.event.pull_request.labels.*.name, 'documentation') }}
     strategy:
       fail-fast: false
       matrix:
@@ -47,6 +48,7 @@ jobs:
   mpi:
     name: MPI ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
     runs-on: ${{ matrix.os }}
+    if: ${{ ! contains(github.event.pull_request.labels.*.name, 'documentation') }}
     timeout-minutes: 40
     strategy:
       fail-fast: false
