--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,7 +37,7 @@ jobs:
       - uses: julia-actions/julia-runtest@v1
         env:
           JULIA_NUM_THREADS: 2
-          TEST_FILTER: 'quality, stability, domains, blocking, convergence, conservation, logging'
+          TEST_FILTER: 'quality, stability, domains, blocking, convergence, conservation, logging, numa'
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v3
         env:
