--- a/Project.toml
+++ b/Project.toml
@@ -42,6 +42,7 @@ EnumX = "1"
 KernelAbstractions = "0.9"
 MPI = "0.20.16"
 Polyester = "0.7 - 0.7.11, ≥0.7.13"
+Scotch = "1"
 julia = ">= 1.9"
 oneAPI = "1"
 
@@ -49,6 +50,7 @@ oneAPI = "1"
 AMDGPU = "21141c5a-9bdb-4563-92ae-f87d6854732e"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
+NUMA = "292f1341-b53f-425a-80e5-3597ad0961bf"
 NVTX = "5da4648a-3479-48b8-97b9-01cb529c0a1f"
 NUMA = "292f1341-b53f-425a-80e5-3597ad0961bf"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
